# ldsc-cpp

./: .gitignore  AUTHORS  CMakeLists.txt  CMakePresets.jso  CMakePresets.json  CREDITS  LICENSE  NOTICE  README.md  citation.cff
.github/workflows/: ci.yml  release.yml
include/: ldsc.hpp  logger.hpp  munge.hpp  ph2.hpp  subcommand.hpp
ldsc.dSYM/Contents/: Info.plist
ldsc.dSYM/Contents/Resources/Relocations/aarch64/: ldsc.yml
src/: ldsc.cpp  logger.cpp  main.cpp  munge.cpp  ph2.cpp
